src/nl/inl/blacklab/queryParser/corpusql/CorpusQueryLanguageParser.java
/* Generated By:JavaCC: Do not edit this line. CorpusQueryLanguageParser.java */
package nl.inl.blacklab.queryParser.corpusql;

import java.util.HashMap;
import java.util.Map;

import nl.inl.blacklab.index.complex.ComplexFieldUtil;
import nl.inl.blacklab.search.IndexStructure;
import nl.inl.blacklab.search.TextPattern;
import nl.inl.blacklab.search.TextPatternAnd;
import nl.inl.blacklab.search.TextPatternContaining;
import nl.inl.blacklab.search.TextPatternEdge;
import nl.inl.blacklab.search.TextPatternNot;
import nl.inl.blacklab.search.TextPatternOr;
import nl.inl.blacklab.search.TextPatternProperty;
import nl.inl.blacklab.search.TextPatternRegex;
import nl.inl.blacklab.search.TextPatternTags;
import nl.inl.blacklab.search.TextPatternWithin;
import nl.inl.blacklab.search.sequences.TextPatternAnyToken;
import nl.inl.blacklab.search.sequences.TextPatternRepetition;
import nl.inl.blacklab.search.sequences.TextPatternSequence;

@SuppressWarnings("all")

public class CorpusQueryLanguageParser implements CorpusQueryLanguageParserConstants {

    public static void main(String[] args) throws nl.inl.blacklab.queryParser.corpusql.ParseException
    {
                CorpusQueryLanguageParser parser = new CorpusQueryLanguageParser(new java.io.StringReader(args[0]));
                parser.query();
    }

    public static TextPattern parse(String query) throws nl.inl.blacklab.queryParser.corpusql.ParseException
    {
        CorpusQueryLanguageParser parser = new CorpusQueryLanguageParser(new java.io.StringReader(query));
        return parser.query();
    }

    private int num(Token t)
    {
        return Integer.parseInt(t.toString());
    }

    private String chopEnds(String input)
    {
        if (input.length() >= 2)
                return input.substring(1, input.length() - 1);
        throw new RuntimeException();
    }

    private String getStringBetweenQuotes(String input) throws SingleQuotesException
    {
        if (!allowSingleQuotes && input.charAt(0) == '\u005c'')
            throw new SingleQuotesException();
        return chopEnds(input);
    }

    private TextPattern simplePattern(String str)
    {
        if (str.length() > 0) {
            if (str.charAt(0) != '^')
                str = "^" + str;
            if (str.charAt(str.length() - 1) != '$')
                str += "$";
        }

        // Treat everything like regex now; will be simplified later if possible
        return new TextPatternRegex(str);
    }

    /** Allow strings to be quoted using single quotes? */
    private boolean allowSingleQuotes = true;

    /** Allow strings to be quoted using single quotes? [default: yes] */
    public void setAllowSingleQuotes(boolean b) {
        allowSingleQuotes = b;
    }

    /** Allow strings to be quoted using single quotes? */
    public boolean getAllowSingleQuotes() {
        return allowSingleQuotes;
    }

    private String defaultProperty = "word"; //ComplexFieldUtil.DEFAULT_MAIN_PROP_NAME;

    public void setDefaultProperty(IndexStructure structure, String fieldName) {
        defaultProperty = structure.getComplexFieldDesc(fieldName).getMainProperty().getName();
    }

    public void setDefaultProperty(String property) {
        defaultProperty = property;
    }

    public String getDefaultProperty() {
        return defaultProperty;
    }

    private TextPattern propertyClause(String prop, TextPattern value) {
        if (ComplexFieldUtil.isMainPropertyNameless()) {
            // Main property has no name.
            if (prop == null || prop.length() == 0 || prop.equals(defaultProperty))
                return value; // default property
            return new TextPatternProperty(prop, value);
        } else {
            // Main property has a name. Use that.
            if (prop == null || prop.length() == 0)
                prop = defaultProperty;
            return new TextPatternProperty(prop, value);
        }
    }

// --- Grammar rules start here ---

/* a query */
  final public TextPattern query() throws ParseException {
        TextPattern a = null;
    a = complexQuery();
    jj_consume_token(0);
        {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

  final public TextPattern complexQuery() throws ParseException {
    TextPattern a = null, b = null;
    Token op = null;
    a = simpleQuery();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WITHIN:
    case CONTAINING:
      op = queryOperator();
      b = complexQuery();
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
        if (op == null)
            {if (true) return a;}
        if (op.toString().equals("within")) {
            // a within b
            {if (true) return new TextPatternWithin(a, b);}
        }

        // a containing b
        {if (true) return new TextPatternContaining(a, b);}
    throw new Error("Missing return statement in function");
  }

  final public Token queryOperator() throws ParseException {
    Token t = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WITHIN:
      t = jj_consume_token(WITHIN);
      break;
    case CONTAINING:
      t = jj_consume_token(CONTAINING);
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
        {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

/* a simple query (not including containing, within, etc.) */
  final public TextPattern simpleQuery() throws ParseException {
    TextPattern query = null, rest = null;
    query = sequence();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 13:
      jj_consume_token(13);
      rest = simpleQuery();
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
        if (rest != null) {
            {if (true) return new TextPatternOr(query, rest);}
        }
        {if (true) return query;}
    throw new Error("Missing return statement in function");
  }

/* a sequence of token constraints */
  final public TextPattern sequence() throws ParseException {
        TextPattern first = null;
        TextPattern result = null;
        TextPattern[] tag = null;
    Token t2 = null;
    first = sequencePart();
    if (jj_2_1(2)) {
      result = sequenceRest(first);
    } else {
      ;
    }
                if (result == null)
                        result = first;

                {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

/* a start or self-closing tag tag such as <s> or <s/> (for finding XML elements).
 * Note that it returns one TextPattern, but if it's in [0] that means it's a start
 * tag; if it's in [1] it's a self-closing tag.
 */
  final public TextPattern tag() throws ParseException {
    Token tagName, endTagSlash = null, selfCloseSlash = null;
    Map<String, String> attr = new HashMap<String, String>();
    jj_consume_token(14);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 15:
      endTagSlash = jj_consume_token(15);
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    tagName = jj_consume_token(NAME);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NAME:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_1;
      }
      attributes(attr);
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 15:
      selfCloseSlash = jj_consume_token(15);
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(16);
        if (endTagSlash != null && selfCloseSlash != null) {
            {if (true) throw new MalformedTagException();}
        }
        TextPattern tags = new TextPatternTags(tagName.toString(), attr);
        if (selfCloseSlash != null)
            {if (true) return tags;}
        if (endTagSlash != null) {
            if (attr.size() > 0) {
                {if (true) throw new MalformedTagException("Cannot filter XML end tag on attributes");}
            }
            {if (true) return new TextPatternEdge(tags, true);} // right edge
        }
        {if (true) return new TextPatternEdge(tags, false);} // left edge

    throw new Error("Missing return statement in function");
  }

  final public Token quotedString() throws ParseException {
    Token a;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case QUOTED_STRING:
      a = jj_consume_token(QUOTED_STRING);
                               {if (true) return a;}
      break;
    case SINGLE_QUOTED_STRING:
      a = jj_consume_token(SINGLE_QUOTED_STRING);
                               {if (true) return a;}
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public void attributes(Map<String, String> attr) throws ParseException {
    Token name, value;
    name = jj_consume_token(NAME);
    jj_consume_token(17);
    value = quotedString();
        attr.put(name.toString(), getStringBetweenQuotes(value.toString()));
  }

/* continuation of a sequence (after the first part) */
  final public TextPattern sequenceRest(TextPattern first) throws ParseException {
        Token op = null;
        TextPattern rest = null;
    rest = sequence();
                if (rest == null)
                        {if (true) return first;}
                {if (true) return new TextPatternSequence(first, rest);}
    throw new Error("Missing return statement in function");
  }

/* a repetition specifier */
  final public Integer[] repetitionAmount() throws ParseException {
        Token t = null, t2 = null;
        Integer[] minMax = new Integer[2];
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 18:
      jj_consume_token(18);
                                              minMax[0] = 0; minMax[1] = -1; {if (true) return minMax;}
      break;
    case 19:
      jj_consume_token(19);
                                              minMax[0] = 1; minMax[1] = -1; {if (true) return minMax;}
      break;
    case 20:
      jj_consume_token(20);
                                              minMax[0] = 0; minMax[1] = 1; {if (true) return minMax;}
      break;
    default:
      jj_la1[8] = jj_gen;
      if (jj_2_2(3)) {
        jj_consume_token(21);
        t = jj_consume_token(NUMBER);
        jj_consume_token(22);
                                              minMax[0] = minMax[1] = num(t); {if (true) return minMax;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 21:
          jj_consume_token(21);
          t = jj_consume_token(NUMBER);
          jj_consume_token(23);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case NUMBER:
            t2 = jj_consume_token(NUMBER);
            break;
          default:
            jj_la1[7] = jj_gen;
            ;
          }
          jj_consume_token(22);
                minMax[0] = num(t);
                if (t2 == null)
                        minMax[1] = -1;
                else
                        minMax[1] = num(t2);
                {if (true) return minMax;}
          break;
        default:
          jj_la1[9] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

/* boolean operator: and, or or implication */
  final public Token booleanOperator() throws ParseException {
        Token t = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 24:
      t = jj_consume_token(24);
      break;
    case 13:
      t = jj_consume_token(13);
      break;
    case 25:
      t = jj_consume_token(25);
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                                    {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

/* sequence part: one part in a sequence, possibly with a repetition operator */
  final public TextPattern sequencePart() throws ParseException {
        TextPattern m = null;
        Integer[] rep = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 14:
      m = tag();
      break;
    case QUOTED_STRING:
    case SINGLE_QUOTED_STRING:
    case 28:
      m = position();
      break;
    case 26:
      jj_consume_token(26);
      m = complexQuery();
      jj_consume_token(27);
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    if (jj_2_3(6)) {
      rep = repetitionAmount();
    } else {
      ;
    }
                if (rep != null)
                {
            if (m instanceof TextPatternAnyToken)
            {
                TextPatternAnyToken any = (TextPatternAnyToken)m;
                m = any.repeat(rep[0], rep[1]);
            } else
                m = new TextPatternRepetition(m, rep[0], rep[1]);
                }
                {if (true) return m;}
    throw new Error("Missing return statement in function");
  }

/* position: a simple attribute value or complex attribute expression between square brackets */
  final public TextPattern position() throws ParseException {
        TextPattern m = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case QUOTED_STRING:
    case SINGLE_QUOTED_STRING:
      m = positionWord();
                                   {if (true) return m;}
      break;
    case 28:
      jj_consume_token(28);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NAME:
      case QUOTED_STRING:
      case SINGLE_QUOTED_STRING:
      case 26:
      case 30:
        m = positionLong();
        break;
      default:
        jj_la1[12] = jj_gen;
        ;
      }
      jj_consume_token(29);
        if (m == null)
            {if (true) return new TextPatternAnyToken(1, 1);}
        {if (true) return m;}
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/* position word: no brackets, just a single token constraint for the default attribute (usually word form) */
  final public TextPattern positionWord() throws ParseException {
        Token t = null;
    t = quotedString();
                                {if (true) return simplePattern(getStringBetweenQuotes(t.toString()));}
    throw new Error("Missing return statement in function");
  }

/* expression inside square brackets: an attribute clause, or multiple
   attribute clauses combined with boolean operators */
  final public TextPattern positionLong() throws ParseException {
        TextPattern a = null, c = null;
        Token b = null;
    a = positionLongPart();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 13:
    case 24:
    case 25:
      b = booleanOperator();
      c = positionLong();
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
                if (b == null)
                        {if (true) return a;}
        if (b.toString().equals("->"))
            {if (true) throw new UnsupportedOperationException("Implication operator not yet supported");}
                if (b.toString().equals("&"))
                        {if (true) return new TextPatternAnd(a, c);}
                {if (true) return new TextPatternOr(a, c);}
    throw new Error("Missing return statement in function");
  }

/* attribute clause: an attribute/value pair, attribute expression between parens, or a negated attribute/value pair */
  final public TextPattern positionLongPart() throws ParseException {
        TextPattern m = null;
    if (jj_2_4(3)) {
      m = attValuePair();
                                        {if (true) return m;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 26:
        jj_consume_token(26);
        m = positionLong();
        jj_consume_token(27);
                                        {if (true) return m;}
        break;
      case 30:
        jj_consume_token(30);
        m = positionLongPart();
                                        {if (true) return new TextPatternNot(m);}
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

/* attribute/value pair, with equals or not equals sign, or possibly just a value (default attribute) */
  final public TextPattern attValuePair() throws ParseException {
        TextPattern v = null;
        Token t = null;
    if (jj_2_5(2)) {
      t = jj_consume_token(NAME);
      jj_consume_token(17);
      v = valuePart();
                                          {if (true) return propertyClause(t.toString(), v);}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NAME:
        t = jj_consume_token(NAME);
        jj_consume_token(31);
        v = valuePart();
                                           {if (true) return new TextPatternNot(propertyClause(t.toString(), v));}
        break;
      case QUOTED_STRING:
      case SINGLE_QUOTED_STRING:
      case 26:
        v = valuePart();
                                          {if (true) return v;}
        break;
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

/* value expression: a value or multiple values combined with boolean operators */
  final public TextPattern value() throws ParseException {
        TextPattern a = null, c = null;
        Token b = null;
    if (jj_2_6(3)) {
      a = valuePart();
      b = booleanOperator();
      c = value();
        if (b.toString().equals("->"))
            {if (true) throw new UnsupportedOperationException("Implication operator not yet supported");}
                if (b.toString().equals("&"))
                        {if (true) return new TextPatternAnd(a, c);}
                {if (true) return new TextPatternOr(a, c);}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case QUOTED_STRING:
      case SINGLE_QUOTED_STRING:
      case 26:
        a = valuePart();
                                          {if (true) return a;}
        break;
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

/* value: a quoted string, a value expression between parens, or a negated value */
  final public TextPattern valuePart() throws ParseException {
        TextPattern m = null;
        Token t = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case QUOTED_STRING:
    case SINGLE_QUOTED_STRING:
      t = quotedString();
                                        {if (true) return simplePattern(getStringBetweenQuotes(t.toString()));}
      break;
    case 26:
      jj_consume_token(26);
      m = value();
      jj_consume_token(27);
                                         {if (true) return m;}
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_3R_16() {
    if (jj_scan_token(26)) return true;
    if (jj_3R_7()) return true;
    if (jj_scan_token(27)) return true;
    return false;
  }

  private boolean jj_3R_5() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_15()) {
    jj_scanpos = xsp;
    if (jj_3R_16()) return true;
    }
    return false;
  }

  private boolean jj_3R_15() {
    if (jj_3R_19()) return true;
    return false;
  }

  private boolean jj_3R_21() {
    if (jj_3R_26()) return true;
    return false;
  }

  private boolean jj_3_1() {
    if (jj_3R_2()) return true;
    return false;
  }

  private boolean jj_3R_17() {
    if (jj_3R_5()) return true;
    return false;
  }

  private boolean jj_3R_20() {
    if (jj_3R_25()) return true;
    return false;
  }

  private boolean jj_3R_25() {
    if (jj_scan_token(14)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(15)) jj_scanpos = xsp;
    if (jj_scan_token(NAME)) return true;
    return false;
  }

  private boolean jj_3R_18() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_20()) {
    jj_scanpos = xsp;
    if (jj_3R_21()) {
    jj_scanpos = xsp;
    if (jj_3R_22()) return true;
    }
    }
    xsp = jj_scanpos;
    if (jj_3_3()) jj_scanpos = xsp;
    return false;
  }

  private boolean jj_3R_7() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_6()) {
    jj_scanpos = xsp;
    if (jj_3R_17()) return true;
    }
    return false;
  }

  private boolean jj_3_6() {
    if (jj_3R_5()) return true;
    if (jj_3R_6()) return true;
    if (jj_3R_7()) return true;
    return false;
  }

  private boolean jj_3R_6() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(24)) {
    jj_scanpos = xsp;
    if (jj_scan_token(13)) {
    jj_scanpos = xsp;
    if (jj_scan_token(25)) return true;
    }
    }
    return false;
  }
